# nutripae-menus

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_ENDPOINTS_DOCUMENTATION.md  CHANGELOG.md  README.md  SEEDING_SUMMARY.md  database_seed_instructions.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
client_sdk/: .npmrc.example  package.json
database_exports/: pae_menus_export_20250705_174614.json
src/: database.py  main.py
src/api/: dishes.py  ingredients.py  menu_cycles.py  menu_schedules.py  nutritional_analysis.py
src/core/: config.py  dependencies.py
src/models/: dish.py  ingredient.py  menu_cycle.py  menu_schedule.py
src/pae_cobertura/: main.py
src/pae_cobertura/models/: __init__.py
src/pae_menus/: database.py  main.py
src/pae_menus/api/: __init__.py  dishes.py  ingredients.py  menu_cycles.py  menu_schedules.py  nutritional_analysis.py
src/pae_menus/core/: config.py
src/pae_menus/models/: __init__.py  commons.py  dish.py  ingredient.py  menu_cycle.py  menu_schedule.py  nutritional_analysis.py
src/pae_menus/scripts/: README.md  __init__.py  export_database.py  import_database.py  manage_database.py  seed_database.py
src/pae_menus/services/: __init__.py  coverage_service.py  dish_service.py  ingredient_service.py  menu_cycle_service.py  menu_schedule_service.py  nutritional_analysis_service.py
src/services/: coverage_service.py  dish_service.py  ingredient_service.py  menu_cycle_service.py  menu_schedule_service.py  nutritional_analysis_service.py
